# ccore

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  base.cmake
.cache/clangd/index/: main.cpp.3392596626F7284F.idx
.devcontainer/: Dockerfile.dev  devcontainer.json
docker/: Dockerfile.dev  Dockerfile.rel
project/: main.cpp
